--- a/api/package.json
+++ b/api/package.json
@@ -9,8 +9,7 @@
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
-    "react": "^18.3.1",
-    "validator": "^13.12.0"
+    "react": "^18.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
